workflow ci add second wf with push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       #- run: npm install -g surge
       - name: Deploy to Staging
         if: github.event_name == 'push'
-        run: npx surge --project ./build --domain silent-apparatus.surge.sh
+        run: npx surge --project ./build --domain wide-eyed-observation.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
