--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npm run test -- --coverage
         env:
           CI: true
-      - name: Upload Test Coverage  
+      - name: Upload Test Coverage
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage
@@ -35,7 +35,8 @@ jobs:
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
-      - name: Upload Build Folder 
+      - name: Upload Build Folder
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: build
