--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "format:check": "prettier --check \"**/*.{js,jsx,yml,ymal,json,css,scss,md,js}\"",
     "format": "prettier --write \"**/*.{js,jsx,yml,ymal,json,css,scss,md,js}\""
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
