feature: add work flow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Salack Message
         run: |
           curl -X POST -H 'Content-type: application/json' 
-          --data '{"text":"New release 
+          --data '{"text":"New release"}' 
           ${{ github.event.release.tag_name }} is out, 
           <${{ github.event.release.html_url}}|check it out now.>"}' 
           ${{ secrets.SLACK_WEBHOOK }}
