--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@zeit/ncc": "^0.22.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.1.1",
     "prettier": "2.2.1",
