--- a/.github/actions/issue/action.yml
+++ b/.github/actions/issue/action.yml
@@ -1,5 +1,5 @@
 name: "Open Github Issue"
-author: alialaa
+author: nalellyfm88
 description: "Opens a github issue"
 inputs:
   token:
@@ -9,9 +9,11 @@ inputs:
     description: "Issue Title"
     required: true
   body:
-    description: "Issue Body"
+    description: Issue Body
+    required: false
   assignees:
     description: "Issue Assignees"
+    required: false
 outputs:
   issue: # id of output
     description: "The issue object as a json string"
